<resources>
    <string name="app_name">YDKW 01 LEARNING APP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Fullname</string>
    <string name="nis">NIS</string>
    <string name="btnsignin">Sign In</string>
    <string name="btnsignup">Sign Up</string>
    <string name="btnsignout">Sign Out</string>
    <string name="gosignin">Sudah memiliki akun?</string>
    <string name="createacc">Pengguna baru?</string>
    <string name="btnedit">Edit Profile</string>
    <string name="btnsave">Save</string>
    <string name="btndiscard">Discard</string>
    <string name="vidtitle">Video Title</string>
    <string name="btnupload">Upload</string>
    <string name="titleport">Title</string>
    <string name="porttitle">Portfolio Title</string>
    <string name="watch">Watch</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="link">www.link.co.id</string>
    <string name="slash">/</string>
</resources>