<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/logo_app" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_border"
        android:padding="7dp">

        <EditText
            android:id="@+id/su_nama"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@color/teal_200"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_border"
        android:padding="7dp">

        <EditText
            android:id="@+id/su_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@color/teal_200"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_border"
        android:padding="7dp">

        <EditText
            android:id="@+id/su_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@color/teal_200"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_border"
        android:padding="7dp">

        <EditText
            android:id="@+id/su_nis"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/nis"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textColorHint="@color/teal_200"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupbtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnborder"
        android:text="@string/btnsignup"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:text="@string/gosignin"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/hac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:text="@string/btnsignin"
        android:textColor="@color/medium"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>