<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SigninActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_border"
        android:padding="7dp">

        <EditText
            android:id="@+id/si_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_border"
        android:padding="7dp">

        <EditText
            android:id="@+id/si_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signinbtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnborder"
        android:text="@string/btnsignin"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:text="@string/createacc"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/createacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:text="@string/btnsignup"
        android:textColor="@color/medium"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>