<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="12dp"
    android:layout_marginHorizontal="20dp"
    android:elevation="5dp"
    android:outlineAmbientShadowColor="@color/light"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_videolist"
        android:padding="10dp">

        <ImageView
            android:id="@+id/matview"
            android:layout_width="180dp"
            android:layout_height="match_parent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/matview">
            <TextView
                android:id="@+id/mattitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:text="@string/vidtitle"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/uploadername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="10dp"
                android:layout_below="@id/mattitle"
                android:text="@string/name"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_white"
                android:layout_below="@+id/uploadername"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="35dp"
                android:text="@string/watch"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>