<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:elevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/share"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/btngray">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_gray"
                    android:padding="8dp"
                    android:elevation="10dp">
                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/link"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copy"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_marginHorizontal="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:gravity="center">
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/btnfb"
                android:layout_margin="10dp"/>
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/btnline"
                android:layout_margin="10dp"/>
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/btnwa"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>